[UPD] header positioning and image added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,215 @@
             <div class="row">
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/1920/1080" alt="">
+                        <img src="https://picsum.photos/800/600" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+                <div class="col-14">
+                    <div class="content">
+                        <img src="https://picsum.photos/800/600" alt="">
+                        <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </main>
