[UPD] icons added in the footer

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="header-buttons">
-            <button class="header-button"></button>
-            <button class="header-button"></button>
+            <button class="header-button"><i class="fa-solid fa-table-cells"></i> Spaeker View</button>
+            <button class="header-button"><i class="fa-solid fa-maximize"></i></button>
         </div>
     </header>
     <main>
@@ -19,211 +19,211 @@
             <div class="row">
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
                 <div class="col-14">
                     <div class="content">
-                        <img src="https://picsum.photos/800/600" alt="">
+                        <img src="https://picsum.photos/1300/750" alt="">
                         <div class="label"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</div>
                     </div>
                 </div>
@@ -232,24 +232,77 @@
         </div>
     </main>
     <footer>
-        <div class="container">
+        <div class="container-footer">
             <div class="row">
                 <div class="col-25">
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-microphone"></i>
+                            <div class="icon-name">Mute</div>
+                        </div>
+                        <div class="option"><i class="fa-solid fa-chevron-up"></i></div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-video"></i>
+                            <div class="icon-name">Stop Video</div>
+                        </div>
+                        <div class="option"><i class="fa-solid fa-chevron-up"></i></div>
+                    </button>
                 </div>
-                <div class="col-50">
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
-                    <button class="footer-button"></button>
+                <div class="col-50 align-center">
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-user-plus"></i>
+                            <div class="icon-name">Invite</div>
+                        </div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-user-group"></i>
+                            <div class="icon-name">Manage Partecipants</div>
+                        </div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-chart-simple"></i>
+                            <div class="icon-name">Polling</div>
+                        </div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-share-from-square green"></i>
+                            <div class="icon-name">Share Screen</div>
+                        </div>
+                        <div class="option"><i class="fa-solid fa-chevron-up"></i></div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-comment"></i>
+                            <div class="icon-name">Chat</div>
+                        </div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-record-vinyl"></i>
+                            <div class="icon-name">Record</div>
+                        </div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-brands fa-microsoft"></i>
+                            <div class="icon-name">Breakout Rooms</div>
+                        </div>
+                    </button>
+                    <button class="footer-button">
+                        <div class="icon-footer">
+                            <i class="fa-solid fa-ellipsis"></i>
+                            <div class="icon-name">More</div>
+                        </div>
+                    </button>
                 </div>
                 <div class="col-25">
-                    <button class="footer-button"></button>
+                    <button class="footer-button red">End meeting</button>
                 </div>
             </div>
         </div>
