[UPD] changed header buttons background color and color rounded the corners of the buttons

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="col-25">
+                <div class="col-25 align-end">
                     <button class="footer-button red">End meeting</button>
                 </div>
             </div>
