[UPD] fixed positioning of the footer and added hover pointer completed exercise

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <i class="fa-solid fa-microphone"></i>
                             <div class="icon-name">Mute</div>
                         </div>
-                        <div class="option"><i class="fa-solid fa-chevron-up"></i></div>
+                        <div class="option v-middle"><i class="fa-solid fa-chevron-up"></i></div>
                     </button>
                     <button class="footer-button">
                         <div class="icon-footer">
